--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -17,6 +17,7 @@ include(CMakeParseArguments)
 function(add_example)
     set(OPTIONS USE_NLOPT USE_EIGEN)
     set(ONE_VALUE_ARGS SUBDIR NAME)
+    set(MULTI_VALUE_ARGS "")
     cmake_parse_arguments(add_example "${OPTIONS}" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" "${ARGN}")
 
     add_executable("${add_example_NAME}" "${add_example_SUBDIR}/${add_example_NAME}.cpp")
@@ -32,7 +33,7 @@ function(add_example)
     if(add_example_USE_EIGEN)
         get_target_property(EIGEN_INCLUDES Eigen3::Eigen INTERFACE_INCLUDE_DIRECTORIES)
         target_link_libraries("${add_example_NAME}" PRIVATE Eigen3::Eigen)
-        target_include_directories("${add_example_NAME}" SYSTEM PUBLIC ${EIGEN_INCLUDES})
+        target_include_directories("${add_example_NAME}" SYSTEM PRIVATE ${EIGEN_INCLUDES})
     endif()
 
     add_custom_target("run_${add_example_NAME}" COMMAND "${add_example_NAME}" VERBATIM)
