Move u-gate simulation code to separate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library(
     source/kettle_internal/parameter/parameter_expression.cpp
     source/kettle_internal/simulation/measure.cpp
     source/kettle_internal/simulation/multithread_simulate_utils.cpp
+    source/kettle_internal/simulation/operations_density_matrix.cpp
     source/kettle_internal/simulation/operations.cpp
     source/kettle_internal/simulation/simulate_density_matrix.cpp
     source/kettle_internal/simulation/simulate_utils.cpp
