Add circuit logger for density matrices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 
+# for linking against Eigen
+set(CMAKE_POLICY_DEFAULT_CMP0111 OLD)
+
 include(cmake/prelude.cmake)
 
 project(
@@ -130,7 +133,7 @@ target_include_directories(
     kettle_kettle
     SYSTEM
     PUBLIC ${NLOPT_INCLUDES}
-    PRIVATE ${EIGEN_INCLUDES}
+    PUBLIC ${EIGEN_INCLUDES}
 )
 
 # ---- Install rules ----
