Make progress towards pauli channel testing and simulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_library(
     source/kettle_internal/io/read_tangelo_file.cpp
     source/kettle_internal/io/statevector.cpp
     source/kettle_internal/io/write_tangelo_file.cpp
+    source/kettle_internal/operator/channels/pauli_channel.cpp
     source/kettle_internal/operator/channels/multi_qubit_kraus_channel.cpp
     source/kettle_internal/operator/channels/one_qubit_kraus_channel.cpp
     source/kettle_internal/operator/pauli/pauli_operator.cpp
